tests/positive/maps/empty_literal/input.ci
void main() {
    int[string] m = [];
    print(toString(mapSize(m)) + "\n");
}
