tests/negative/maps/struct_key/input.ci
structure Person { string name = ""; }
void main() {
    int[Person] m = [];
}
